tests/lean/meta_equation_pos.lean
meta def f (x : nat) : nat :=
tt -- type error should be reported here

check nat
